--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2,11 +2,34 @@ fr:
   activerecord:
     models:
       task: tâche
+      content: contenu
+      created_at: date et heure de création
     attributes:
       task:
         title: titre
         content: contenu
         created_at: date et heure de création
+        deadline_on: Date limite
+        priority:  priorité
+        status: statut
+
+      user:
+        name: Nom
+        email: Adresse email
+        password: Mot de passe
+        password_confirmation: Mot de passe (confirmation)
+        admin: Droits d'administrateur
+
+        enum:
+          task:
+            priority:
+              low: faible
+              middle: moyen
+              high: haut
+            status:
+              todo: Pas commencé
+              doing: en cours
+              done: complétée 
     
 
       #user:
@@ -19,9 +42,9 @@ fr:
     messages:
       blank: Veuillez entrer-
       
-      #taken: déjà utilisé
-      #too_short: は6文字以上で入力してください
-      #confirmation: とパスワードの入力が一致しません
+      taken: déjà utilisé
+      too_short: Veuillez saisir au moins 6 caractères
+      confirmation: et le mot de passe ne correspondent pas
   helpers:
     submit:
       create: Creer
